--- a/sass/components/_about-us.scss
+++ b/sass/components/_about-us.scss
@@ -13,7 +13,7 @@
   }
   @media screen and (min-width: 1200px) {
     display: flex;
-    margin: -15px;
+    // margin: -15px;
     // justify-content: space-between;
   }
 }
