--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -117,4 +117,5 @@
 .networks-link:focus {
   fill: var(--primory-white-color);
   background-color: var(--accent-color);
+  transition-duration: 1s;
 }
