--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -116,13 +116,11 @@
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: block;
     margin-bottom: 0;
-    padding: 40px 0;
     cursor: pointer;
   }
   @media screen and (min-width: 1200px) {
     display: block;
     margin-bottom: 0;
-    // padding: 32px 0;
   }
 }
 
@@ -136,10 +134,14 @@
   letter-spacing: 0.02em;
   color: var(--title-text-color);
   @media screen and (min-width: 768px) and (max-width: 1199px) {
+    position: relative;
+    padding: 40px 0;
     font-size: 14px;
     line-height: 1.14px;
   }
   @media screen and (min-width: 1200px) {
+    position: relative;
+    padding: 40px 0;
     font-size: 14px;
     line-height: 1.14px;
   }
@@ -147,6 +149,7 @@
 .header .menu-container .nav-links-list .link:hover,
 .header .menu-container .nav-links-list .link:focus {
   color: var(--accent-color);
+  transition-duration: 250ms;
 }
 
 .header .menu-container .nav-links-list .link:not(:last-child) {
@@ -199,17 +202,42 @@
     padding: 32px 0;
   }
 }
+.header .menu-container .nav-links-list .link.current {
+  color: var(--accent-color);
+}
+
+.header .link.current::after {
+  position: absolute;
+  content: '';
+
+  left: 0%;
+  bottom: 0%;
+  width: 100%;
+  height: 5px;
+
+  background-color: var(--accent-color);
+  border-radius: 2px;
+  opacity: 1;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+}
 .contact-us-list .link:hover .link-icon,
 .contact-us-list .link:focus .link-icon {
   fill: var(--accent-color);
+  transition-duration: 250ms;
 }
 .contact-us-list .link:hover,
 .contact-us-list .link:focus {
   color: var(--accent-color);
+  transition-duration: 250ms;
 }
 
 .header .nav .social-network-links-list {
   display: flex;
+  @media screen and (max-width: 767px) {
+    padding-bottom: 48px;
+  }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: none;
   }
@@ -243,4 +271,7 @@
   text-align: center;
   height: 16px;
   fill: var(--primaty-text-color);
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
